[gd_scene load_steps=4 format=3 uid="uid://d17wryx24n3vn"]

[ext_resource type="Texture2D" uid="uid://ci8n2cxagllht" path="res://Opening/Scene1_1.png" id="1_pyaul"]
[ext_resource type="Script" path="res://Opening/opening.gd" id="1_tatwm"]
[ext_resource type="Script" path="res://Opening/scene.gd" id="3_eoq0r"]

[node name="opening" type="Node2D"]
script = ExtResource("1_tatwm")

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
z_index = -1
scale = Vector2(0.479296, 0.479012)
texture = ExtResource("1_pyaul")
centered = false
script = ExtResource("3_eoq0r")

[node name="scene-timer-1" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="scene-timer-2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="scene-timer-3" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="scene-timer-4" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="scene-timer-5" type="Timer" parent="."]
wait_time = 14.0
one_shot = true
autostart = true

[connection signal="timeout" from="scene-timer-1" to="Sprite2D" method="_on_scenetimer_1_timeout"]
[connection signal="timeout" from="scene-timer-2" to="Sprite2D" method="_on_scenetimer_2_timeout"]
[connection signal="timeout" from="scene-timer-3" to="Sprite2D" method="_on_scenetimer_3_timeout"]
[connection signal="timeout" from="scene-timer-4" to="." method="_on_scenetimer_4_timeout"]
[connection signal="timeout" from="scene-timer-4" to="Sprite2D" method="_on_scenetimer_4_timeout"]
[connection signal="timeout" from="scene-timer-5" to="." method="_on_scenetimer_5_timeout"]
